--- a/css/main.css
+++ b/css/main.css
@@ -518,8 +518,8 @@ button:focus {
 }
 
 .menu-bg {
-  background: -webkit-linear-gradient(left, #3c96ff 0%, #2dfbff 100%) !important;
-  background: linear-gradient(to right, #3c96ff 0%, #2dfbff 100%) !important;
+  background: -webkit-linear-gradient(left, #005983 0%, #71f8fb 100%) !important;
+  background: linear-gradient(to right, #005983 0%, #71f8fb 100%) !important;
   box-shadow: 0 0 7px 1px rgba(0, 0, 0, 0.1);
   z-index: 9999;
   padding: 5px;
@@ -2146,9 +2146,9 @@ textarea {
 }
 
 footer .footer-Content {
-  background-image: -moz-linear-gradient(0deg, #3c96ff 0%, #2dfbff 100%);
-  background-image: -webkit-linear-gradient(0deg, #3c96ff 0%, #2dfbff 100%);
-  background-image: -ms-linear-gradient(0deg, #3c96ff 0%, #2dfbff 100%);
+  background-image: -moz-linear-gradient(0deg, #005983 0%, #02b9bd 100%);
+  background-image: -webkit-linear-gradient(0deg, #005983 0%, #02b9bd 100%);
+  background-image: -ms-linear-gradient(0deg, #005983 0%, #02b9bd 100%);
   padding: 60px 0 0px;
   color: #546E7A;
 }
